jenkins-from-scratch/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
  - name: jenkins-port
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: slave
    port: 50000
    targetPort: 50000
    protocol: TCP
